--- a/ProntoEntries/Content/MainLayout.css
+++ b/ProntoEntries/Content/MainLayout.css
@@ -551,13 +551,94 @@ input[type="checkbox"] {
 
 /* PARTICIPANT STYLING*/
 
-.partelement {
-    display:flex;
-    justify-content: space-between;
+.participantcontainer {
+    display: flex;
 }
 
+.participantleft {
+    display:flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.participantright {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+ 
+}
+
+.partelement {
+    width: 100%;
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+}
+
+    .partelement .labelfix {
+        width: 45%;
+        display: flex;
+        padding: 0;
+        font-size: 12px;
+        margin: 0px auto;
+    }
+    .partelement .checkbox {
+        width: 45%;
+        display: flex;
+        padding: 0;
+        font-size: 12px;
+        margin: 0px auto;
+    }
+
+.participantleft p {
+    text-align: center;
+    font-size: 20px;
+}
+
+
+.partelement .item {
+    width: 45%;
+    height: 20px;
+    background: #e0dede;
+    justify-content: center;
+    display: flex;
+    margin: 10px auto;
+    padding: 10px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+}
+
+/* SEARCH STYLING*/
+
+.DropdownSearches {
+    display: flex;
+}
+
+    .DropdownSearches .item {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        width: 100%;
+        text-align: center;
+        align-content: center;
+        justify-content: center;
+    }
+
+    .DropdownSearches input[type="submit"] {
+        margin: 0 0 0 40%;
+    }
+
+
+.DropdownSearches .form-control {
+    width: 83%;
+  
+}
+
+
 /* Cart Payment Button*/
-.button-cart{
+.button-cart {
     width: 100%;
     height: 20px;
     justify-content: right;
@@ -573,11 +654,11 @@ input[type="checkbox"] {
 
 
 /* SideBar Menu For Mobile*/
-input[type="checkbox"]:checked ~ #sidebarMenu {
+.navright input[type="checkbox"]:checked ~ #sidebarMenu {
     transform: translateX(0);
 }
 
-input[type=checkbox] {
+.navright input[type=checkbox] {
     transition: all 0.3s;
     box-sizing: border-box;
     display: none;
@@ -629,20 +710,20 @@ input[type=checkbox] {
     margin-top: 3px;
 }
 
-input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
+.navright input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
     transition: all 0.3s;
     box-sizing: border-box;
     opacity: 0;
 }
 
-input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
+.navright input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
     transition: all 0.3s;
     box-sizing: border-box;
     transform: rotate(135deg);
     margin-top: 8px;
 }
 
-input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
+.navright input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     transition: all 0.3s;
     box-sizing: border-box;
     transform: rotate(-135deg);
