--- a/ProntoEntries/Content/MainLayout.css
+++ b/ProntoEntries/Content/MainLayout.css
@@ -463,7 +463,7 @@ input[type="checkbox"] {
     }
 
 
-    /*
+/*
     EDIT LAYOUT
     */
 
@@ -483,13 +483,13 @@ input[type="checkbox"] {
     justify-content: space-between;
 }
 
-.EventDetail .form--el1 {
-    width: 60%;
-}
+    .EventDetail .form--el1 {
+        width: 60%;
+    }
 
-.EventDetail .form--el2 {
-    width: 35%;
-}
+    .EventDetail .form--el2 {
+        width: 35%;
+    }
 
 /* RACE CONTROL*/
 
@@ -511,15 +511,15 @@ input[type="checkbox"] {
         font-size: 20px;
     }
 
-    .EntryLink {
-        width: 50%;
-        align-self: flex-end;
-        margin-top: 10px;
-    }
-
-.EntryLink a{
-    color: #000;
+.EntryLink {
+    width: 50%;
+    align-self: flex-end;
+    margin-top: 10px;
 }
+
+    .EntryLink a {
+        color: #000;
+    }
 
 .Small p {
     font-size: 16px;
@@ -535,13 +535,13 @@ input[type="checkbox"] {
     justify-content: space-between;
 }
 
-.RC--1 ul {
-    padding: 0;
-}
+    .RC--1 ul {
+        padding: 0;
+    }
 
-.RC--1 p:first-child {
-    color: white;
-}
+    .RC--1 p:first-child {
+        color: white;
+    }
 
     .RC--1 p {
         margin: 0;
@@ -556,7 +556,7 @@ input[type="checkbox"] {
 }
 
 .participantleft {
-    display:flex;
+    display: flex;
     flex: 1;
     justify-content: center;
     align-items: center;
@@ -566,7 +566,6 @@ input[type="checkbox"] {
     flex: 2;
     display: flex;
     flex-direction: column;
- 
 }
 
 .partelement {
@@ -583,6 +582,7 @@ input[type="checkbox"] {
         font-size: 12px;
         margin: 0px auto;
     }
+
     .partelement .checkbox {
         width: 45%;
         display: flex;
@@ -631,10 +631,9 @@ input[type="checkbox"] {
     }
 
 
-.DropdownSearches .form-control {
-    width: 83%;
-  
-}
+    .DropdownSearches .form-control {
+        width: 83%;
+    }
 
 /* Cart Payment Button*/
 .button-cart {
@@ -656,7 +655,7 @@ input[type="checkbox"] {
 }
 
 .menuarea {
-   display: flex;
+    display: flex;
 }
 
 .navright input[type=checkbox] {
@@ -673,8 +672,32 @@ input[type="checkbox"] {
     display: none;
 }
 
-/*css for mobile phones*/
+/* DASHBOARD STYLING*/
 
+.dashboardcontainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2%;
+    justify-content: center;
+}
+
+.reportitem {
+    width: 45%;
+    min-width: 330px;
+    margin-bottom: 20px;
+    padding: 5px;
+
+
+    border: solid;
+    border-color: #FFF;
+    /*background-color: rgba(255, 255, 255, 0.60);*/
+    border-radius: 20px;
+    box-shadow: 5px 5px 2px #aaaaaa;
+}
+
+
+/*css for mobile phones*/
 @media screen and (max-width: 1030px) {
     body {
         max-width: 100%;
@@ -886,9 +909,9 @@ input[type="checkbox"] {
         display: inline;
     }
 
-        .menuarea {
-            display: inline;
-        }
+    .menuarea {
+        display: inline;
+    }
 }
 /*.logobox {
     width: 30%;
