--- a/ProntoEntries/Content/MainLayout.css
+++ b/ProntoEntries/Content/MainLayout.css
@@ -64,7 +64,7 @@ li {
 
     li:last-child::after {
         content: "";
-    }
+    }    
 
     li::after {
         content: "|";
@@ -74,6 +74,10 @@ li {
 div {
 }
 
+
+.navright li:nth-last-child(-n+2)::after {
+    content: "";
+}
 
 .mainbody {
     margin: 0;
