--- a/ProntoEntries/Content/MainLayout.css
+++ b/ProntoEntries/Content/MainLayout.css
@@ -15,6 +15,18 @@ span {
     text-transform: uppercase;
 }
 
+.text-danger {
+    text-align: center;
+    color: red;
+
+}
+
+    .text-danger li {
+        text-align: center;
+        color: red;
+        background-color: rgba(255, 255, 255, 0.60);
+    }
+
 .color-white {
     background-color: #fff;
 }
