--- a/ProntoEntries/Content/MainLayout.css
+++ b/ProntoEntries/Content/MainLayout.css
@@ -134,6 +134,12 @@ footer {
         text-align: center;
     }
 
+.warningbanner {
+    text-align: center;
+    padding: 5px 0;
+    color:white;
+    background-color: red;
+}
 
 .logobox {
     height: 100%;
@@ -169,9 +175,21 @@ h2 {
     margin: 0;
 }
 
+h3 {
+    color: white;
+    display: inline-block;
+    margin: 5px 0 15px 0;
+}
+
 .table {
     color: lightgrey;
     width: 100%;
+}
+
+.tablereport {
+    color: lightgrey;
+    width: 100%;
+    font-size: 14px;
 }
 
 td {
@@ -785,6 +803,12 @@ input[type="checkbox"] {
     }
 
     .table {
+        color: lightgrey;
+        max-width: 100%;
+        font-size: 10px;
+    }
+
+    .tablereport {
         color: lightgrey;
         max-width: 100%;
         font-size: 10px;
