Updated Print Confirmation, set email error message

--- a/ProntoEntries/Content/MainLayout.css
+++ b/ProntoEntries/Content/MainLayout.css
@@ -412,6 +412,11 @@ input[type="submit"] {
         color: lightgrey;
     }
 
+.PrintConfirmation a {
+    color: White;
+    font-weight: bold;
+}
+
 .linkbuttonlogin {
     display: flex;
     width: 40%;
