--- a/ProntoEntries/Content/MainLayout.css
+++ b/ProntoEntries/Content/MainLayout.css
@@ -510,6 +510,51 @@ input[type="submit"] {
             padding-top: 12px;
         }
 
+.shopselecter {
+    display: flex;
+    justify-items: left;
+    padding: 5px 0 0 10px;
+    margin: 0;
+    flex-direction: column;
+}
+
+
+    .shopselecter li {
+        /*position: relative;*/
+        display: inline-block;
+        font-size: 16px;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        cursor: pointer;
+        padding-bottom: 10px;
+        color: #FFF;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+        .shopselecter li:last-child::after {
+            content: "";
+        }
+
+        .shopselecter li::after {
+            content: "";
+            padding: 0;
+        }
+
+        .shopselecter li:first-child {
+            width: 100%;
+            font-size: 18px;
+            color: #000;
+            text-align: center;
+            padding-bottom: 15px;
+        }
+
+        .shopselecter li:last-child {
+            padding-top: 12px;
+        }
+
 .raceflexitem .button-group {
     width: 80%;
 }
